Updated driver to support Freescale Kinetis (ARM Cortex-M0+ tested) devices.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Object files
 *.o
 *.ko
+*.stg
+*.tdt
 
 # Libraries
 *.lib
@@ -16,9 +18,11 @@
 *.exe
 *.out
 *.app
+*.abs
+*.s19
 
 # Projects nonsense files
 *.dep
+*.map
 
 # Folders
-
